tests/core/snapshots/http-select.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Company {
  catchPhrase: String!
  name: String!
}

type Query {
  userCompany(id: Int!): Company @http(url: "http://upstream/users/{{.args.id}}", select: "{{.company}}")
  userDetails(id: Int!): UserDetails
    @http(
      url: "http://upstream/users/{{.args.id}}"
      select: {id: "{{.id}}", city: "{{.address.city}}", phone: "{{.phone}}"}
    )
}

type UserDetails {
  city: String!
  id: Int!
  phone: String!
}
