tests/core/snapshots/https.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  firstUser: User
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
