tests/core/snapshots/inline-field.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user: User
}

type User {
  address: String
}

schema {
  query: Query
}
