tests/core/snapshots/inline-index-list.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "username": "Leanne Graham"
    }
  }
}
