tests/core/snapshots/inline-index-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query @addField(name: "username", path: ["username", "0", "name"]) {
  username: [User] @http(url: "http://jsonplaceholder.typicode.com/users") @modify(omit: true)
}

type User {
  name: String
}
