tests/core/snapshots/inline-many-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  u: U
}

type U {
  b: [String]
  c: String
  d: String
  e: String
}

schema {
  query: Query
}
